переписаны getViews сервисов