@@ -2,7 +2,6 @@ package ru.practicum.main_server.service.private_service;
 
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.main_server.client.StatisticClient;
@@ -12,10 +11,7 @@ import ru.practicum.main_server.exception.InternalServerErrorException;
 import ru.practicum.main_server.exception.NotFoundException;
 import ru.practicum.main_server.mapper.EventMapper;
 import ru.practicum.main_server.model.*;
-import ru.practicum.main_server.model.dto.EventFullDto;
-import ru.practicum.main_server.model.dto.EventShortDto;
-import ru.practicum.main_server.model.dto.NewEventDto;
-import ru.practicum.main_server.model.dto.UpdateEventRequest;
+import ru.practicum.main_server.model.dto.*;
 import ru.practicum.main_server.repository.CategoryRepository;
 import ru.practicum.main_server.repository.EventRepository;
 import ru.practicum.main_server.repository.UserRepository;
@@ -23,8 +19,10 @@ import ru.practicum.main_server.repository.UserRepository;
 import java.io.UnsupportedEncodingException;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -48,11 +46,15 @@ public class PrivateEventService {
 
     public List<EventShortDto> readEvents(long userId, int from, int size) {
         log.info("PrivateEventService: чтение событий userId={}, from={}, size={}", userId, from, size);
-        return eventRepository.findAllByInitiatorId(userId, PageRequest.of(from / size, size))
+        /*return eventRepository.findAllByInitiatorId(userId, PageRequest.of(from / size, size))
                 .stream()
                 .map(EventMapper::toEventShortDto)
                 .peek(e -> e.setViews(getViews(e.getId())))
-                .collect(Collectors.toList());
+                .collect(Collectors.toList());*/
+
+        List<Event> e = getViewsMultipleEvents(eventRepository.findAllByInitiatorId(userId,
+                PageRequest.of(from / size, size)).toList());
+        return e.stream().map(EventMapper::toEventShortDto).collect(Collectors.toList());
     }
 
     @Transactional
@@ -60,7 +62,7 @@ public class PrivateEventService {
         Event event = getEventFromRequest(userId, updateEventRequest);
         event = eventRepository.save(event);
         EventFullDto eventFullDto = EventMapper.toEventFullDto(event);
-        eventFullDto.setViews(getViews(event.getId()));
+        eventFullDto.setViews(getViewsSingleEvent(updateEventRequest.getEventId()));
         log.info("PrivateEventService: событие обновлено userId={}, newEvent={}", userId, updateEventRequest);
         return eventFullDto;
     }
@@ -94,6 +96,7 @@ public class PrivateEventService {
         checkEventInitiator(userId, eventId);
         event.setState(State.CANCELED);
         event = eventRepository.save(event);
+        event.setViews(getViewsSingleEvent(eventId));
         log.info("PrivateEventService: событие id={} отменено пользователем с id={}", eventId, userId);
         return EventMapper.toEventFullDto(event);
     }
@@ -104,10 +107,10 @@ public class PrivateEventService {
      * @param eventId айди события
      * @return int - количество просмотров
      */
-    private Integer getViews(long eventId) {
-        ResponseEntity<Object> responseEntity;
+    private Integer getViewsSingleEvent(long eventId) {
+        ViewStats[] stats;
         try {
-            responseEntity = statClient.getStats(
+            stats = statClient.getStats(
                     eventRepository.getReferenceById(eventId).getCreatedOn(),
                     LocalDateTime.now(),
                     List.of("/events/" + eventId),
@@ -115,17 +118,33 @@ public class PrivateEventService {
         } catch (UnsupportedEncodingException e) {
             throw new InternalServerErrorException("неудачная кодировка");
         }
-        if (responseEntity.getStatusCode().is2xxSuccessful()) {
-            Integer views = null;
-            List<Map<String, Object>> body = (List<Map<String, Object>>) responseEntity.getBody();
-            if (body != null && body.size() > 0) {
-                for (Map<String, Object> s : body) {
-                    views = (((Number) s.get("hits")).intValue());
-                }
-            }
-            return views;
+        if (stats != null) {
+            return Arrays.asList(stats).get(0).getHits();
         }
         return 0;
+    }
+
+    private List<Event> getViewsMultipleEvents(List<Event> events) {
+        ViewStats[] stats;
+        List<String> uris = events.stream()
+                .map(e -> "/events/" + e.getId())
+                .collect(Collectors.toList());
+        try {
+            stats = statClient.getStats(
+                    (Collections.min(events, Comparator.comparing(Event::getCreatedOn)).getCreatedOn()),
+                    LocalDateTime.now(),
+                    uris,
+                    false);
+        } catch (UnsupportedEncodingException e) {
+            throw new InternalServerErrorException("неудачная кодировка");
+        }
+        List<ViewStats> statsList = Arrays.asList(stats);
+        if (!statsList.isEmpty()) {
+            for (int i = 0; i < statsList.size(); i++) {
+                events.get(i).setViews(statsList.get(i).getHits());
+            }
+        }
+        return events;
     }
 
     /**
